@@ -4,8 +4,11 @@
 - Added the "muon-updater" program, an update-centric GUI
 - The download view has been revamped, now supporting per-item progress, 
   as well as displaying the size for each item
-- A new filterable status "Residual Config" is available in the filters pane.
-  This filter shows packages taht still have purgeable config files laying around.
+- Add a new "Residual Config" filter to the filters pane.
+  This filter shows packages that still have purgeable config files laying around.
+- Add a new "Installed (auto-removable)" filter to the filters pane.
+  This filter shows packages that were automatically installed that no longer
+  have any installed dependants. (Basically, what apt-get autoremove would show)
 - The Technical Details tab now displays the package's origin
 - Added a progress bar to Muon's statusbar to show Xapian indexing update progress.
 - Added an update notification KDED Module
